syntax = "proto3";
option java_package = "com.vang.typeservice.grpc.gen";
option java_outer_classname = "TypeGrpcServer";
option java_multiple_files = true;
package com.vang;

service GetTypeById {
  rpc getData(GetTypeByIdRequest) returns (GetTypeByIdReply);
}

message GetTypeByIdRequest {
  string typeId = 1;
}

message GetTypeByIdReply {
  bool status = 1;
  string responseJson = 2;
}